5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4171/executions/1807_2564.log
== TEST (2019-06-08 20:33:33) 
-- CODE:
from numpy import *

golpro = array(eval(input("")))
golcon = array(eval(input("")))

x = zeros(size(golpro), dtype = int)

for i in golpro:
	for i in gol con:
		if golpro[i] > golpro[i]:
			x[0] += 1
		
		
print(x)

-- ERROR:
File "XXXX", line 9
    for i in gol con:
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 20:33:40) 
-- CODE:
from numpy import *

golpro = array(eval(input("")))
golcon = array(eval(input("")))

x = zeros(size(golpro), dtype = int)

for i in golpro:
	for i in golcon:
		if golpro[i] > golpro[i]:
			x[0] += 1
		
		
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 20:33:46) 
-- CODE:
from numpy import *

golpro = array(eval(input("")))
golcon = array(eval(input("")))

x = zeros(size(golpro), dtype = int)

for i in golpro:
	for i in golcon:
		if golpro[i] > golcon[i]:
			x[0] += 1
		
		
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 20:34:35) 
-- CODE:
from numpy import *

golpro = array(eval(input("")))
golcon = array(eval(input("")))

x = zeros(size(golpro), dtype = int)

for i in golpro:
	for i in golcon:
		if golpro[i] > golcon[i]:
			x[0] += 1
		print(x)
		
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 20:36:14) 
-- CODE:
from numpy import *

golpro = array(eval(input("")))
golcon = array(eval(input("")))

x = zeros(3, dtype = int)

for i in golpro:
	for i in golcon:
		if golpro[i] > golcon[i]:
			x[0] += 1
		if golpro[i] == golcon[i]
			x[1] += 1
		if golpro[i] < golcon[i]
			x[2] += 1
		
print(x)

-- ERROR:
File "XXXX", line 12
    if golpro[i] == golcon[i]
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 20:36:24) 
-- CODE:
from numpy import *

golpro = array(eval(input("")))
golcon = array(eval(input("")))

x = zeros(3, dtype = int)

for i in golpro:
	for i in golcon:
		if golpro[i] > golcon[i]:
			x[0] += 1
		if golpro[i] == golcon[i]:
			x[1] += 1
		if golpro[i] < golcon[i]:
			x[2] += 1
		
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 20:37:05) 
-- CODE:
from numpy import *

golpro = array(eval(input("")))
golcon = array(eval(input("")))

x = zeros(3, dtype = int)

for i in golpro:
	for i in golcon:
		if golpro[i] > golcon[i]:
			x[0] += i
		if golpro[i] == golcon[i]:
			x[1] += i
		if golpro[i] < golcon[i]:
			x[2] += i
		
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 20:37:35) 
-- CODE:
from numpy import *

golpro = array(eval(input("")))
golcon = array(eval(input("")))

x = zeros(3, dtype = int)

for i in golpro:
		if golpro[i] > golcon[i]:
			x[0] += 1
		if golpro[i] == golcon[i]:
			x[1] += 1
		if golpro[i] < golcon[i]:
			x[2] += 1
		
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 20:38:01) 
-- CODE:
from numpy import *

golpro = array(eval(input("")))
golcon = array(eval(input("")))

x = zeros(3, dtype = int)

for i in golpro:
	if golpro[i] > golcon[i]:
		x[0] += 1
	if golpro[i] == golcon[i]:
		x[1] += 1
	if golpro[i] < golcon[i]:
		x[2] += 1
		
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 20:38:43) 
-- CODE:
from numpy import *

golpro = array(eval(input("")))
golcon = array(eval(input("")))

x = zeros(3, dtype = int)

for i in golpro:
	if golpro[i] > golcon[i]:
		x[0] += 1
	if golpro[i] == golcon[i]:
		x[1] += 1
	if golpro[i] < golcon[i]:
		x[2] += 1
	print(x)
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 20:38:47) 
-- CODE:
from numpy import *

golpro = array(eval(input("")))
golcon = array(eval(input("")))

x = zeros(3, dtype = int)

for i in golpro:
	if golpro[i] > golcon[i]:
		x[0] += 1
	if golpro[i] == golcon[i]:
		x[1] += 1
	if golpro[i] < golcon[i]:
		x[2] += 1
	print(x)
print(x)

-- EXECUTION TIME:
1.75227
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[1 0 0]
[2 0 0]
[3 0 0]
[4 0 0]
[5 0 0]
[6 0 0]
[7 0 0]
[8 0 0]
[9 0 0]
[10  0  0]
[10  1  0]
[10  1  1]
[10  1  1]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 1]
[0 0 2]
[0 0 3]
[0 0 4]
[0 0 5]
[0 0 6]
[0 0 7]
[0 0 8]
[0 0 9]
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[1 0 0]
[2 0 0]
[3 0 0]
[4 0 0]
[5 0 0]
[6 0 0]
[7 0 0]
[8 0 0]
[9 0 0]
[10  0  0]
[11  0  0]
[12  0  0]
[13  0  0]
[13  0  0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 20:39:02) 
-- CODE:
from numpy import *

golpro = array(eval(input("")))
golcon = array(eval(input("")))

x = zeros(3, dtype = int)
i = -
for i in golpro:
	if golpro[i] > golcon[i]:
		x[0] += 1
	if golpro[i] == golcon[i]:
		x[1] += 1
	if golpro[i] < golcon[i]:
		x[2] += 1
	print(x)
print(x)

-- ERROR:
File "XXXX", line 7
    i = -
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 20:39:06) 
-- CODE:
from numpy import *

golpro = array(eval(input("")))
golcon = array(eval(input("")))

x = zeros(3, dtype = int)
i = 0
for i in golpro:
	if golpro[i] > golcon[i]:
		x[0] += 1
	if golpro[i] == golcon[i]:
		x[1] += 1
	if golpro[i] < golcon[i]:
		x[2] += 1
	print(x)
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 20:39:18) 
-- CODE:
from numpy import *

golpro = array(eval(input("")))
golcon = array(eval(input("")))

x = zeros(3, dtype = int)
i = 0
for i in golpro:
	if golpro[i] > golcon[i]:
		x[0] += 1
	if golpro[i] == golcon[i]:
		x[1] += 1
	if golpro[i] < golcon[i]:
		x[2] += 1
	print(x)
print(x)

-- EXECUTION TIME:
1.06212
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[1 0 0]
[2 0 0]
[3 0 0]
[4 0 0]
[5 0 0]
[6 0 0]
[7 0 0]
[8 0 0]
[9 0 0]
[10  0  0]
[10  1  0]
[10  1  1]
[10  1  1]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 1]
[0 0 2]
[0 0 3]
[0 0 4]
[0 0 5]
[0 0 6]
[0 0 7]
[0 0 8]
[0 0 9]
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[1 0 0]
[2 0 0]
[3 0 0]
[4 0 0]
[5 0 0]
[6 0 0]
[7 0 0]
[8 0 0]
[9 0 0]
[10  0  0]
[11  0  0]
[12  0  0]
[13  0  0]
[13  0  0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 20:39:26) 
-- CODE:
from numpy import *

golpro = array(eval(input("")))
golcon = array(eval(input("")))

x = zeros(3, dtype = int)
i
for i in golpro:
	if golpro[i] > golcon[i]:
		x[0] += 1
	if golpro[i] == golcon[i]:
		x[1] += 1
	if golpro[i] < golcon[i]:
		x[2] += 1
	print(x)
print(x)

-- EXECUTION TIME:
1.57449
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2564/main.py", line 7, in <module>
    
NameError: name 'i' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 20:39:26) 
-- CODE:
from numpy import *

golpro = array(eval(input("")))
golcon = array(eval(input("")))

x = zeros(3, dtype = int)

for i in golpro:
	if golpro[i] > golcon[i]:
		x[0] += 1
	if golpro[i] == golcon[i]:
		x[1] += 1
	if golpro[i] < golcon[i]:
		x[2] += 1
	print(x)
print(x)

-- EXECUTION TIME:
2.09237
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[1 0 0]
[2 0 0]
[3 0 0]
[4 0 0]
[5 0 0]
[6 0 0]
[7 0 0]
[8 0 0]
[9 0 0]
[10  0  0]
[10  1  0]
[10  1  1]
[10  1  1]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 1]
[0 0 2]
[0 0 3]
[0 0 4]
[0 0 5]
[0 0 6]
[0 0 7]
[0 0 8]
[0 0 9]
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[1 0 0]
[2 0 0]
[3 0 0]
[4 0 0]
[5 0 0]
[6 0 0]
[7 0 0]
[8 0 0]
[9 0 0]
[10  0  0]
[11  0  0]
[12  0  0]
[13  0  0]
[13  0  0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 20:39:30) 
-- CODE:
from numpy import *

golpro = array(eval(input("")))
golcon = array(eval(input("")))

x = zeros(3, dtype = int)

for i in golpro:
	if golpro[i] > golcon[i]:
		x[0] += 1
	if golpro[i] == golcon[i]:
		x[1] += 1
	if golpro[i] < golcon[i]:
		x[2] += 1
	print(x)
print(x)

-- EXECUTION TIME:
0.911491
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[1 0 0]
[2 0 0]
[3 0 0]
[4 0 0]
[5 0 0]
[6 0 0]
[7 0 0]
[8 0 0]
[9 0 0]
[10  0  0]
[10  1  0]
[10  1  1]
[10  1  1]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 1]
[0 0 2]
[0 0 3]
[0 0 4]
[0 0 5]
[0 0 6]
[0 0 7]
[0 0 8]
[0 0 9]
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[1 0 0]
[2 0 0]
[3 0 0]
[4 0 0]
[5 0 0]
[6 0 0]
[7 0 0]
[8 0 0]
[9 0 0]
[10  0  0]
[11  0  0]
[12  0  0]
[13  0  0]
[13  0  0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 20:40:08) 
-- CODE:
from numpy import *

golpro = array(eval(input("")))
golcon = array(eval(input("")))

x = zeros(3, dtype = int)

for i in golpro:
	if golpro[i] > golcon[i]:
		x[0] += 1
	if golpro[i] == golcon[i]:
		x[1] += 1
	if golpro[i] < golcon[i]:
		x[2] += 1
	print(x)
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 20:40:13) 
-- CODE:
from numpy import *

golpro = array(eval(input("")))
golcon = array(eval(input("")))

x = zeros(3, dtype = int)

for i in golpro:
	if golpro[i] > golcon[i]:
		x[0] += 1
	if golpro[i] == golcon[i]:
		x[1] += 1
	if golpro[i] < golcon[i]:
		x[2] += 1
	print(x)
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 20:40:30) 
-- CODE:
from numpy import *

golpro = array(eval(input("")))
golcon = array(eval(input("")))

x = zeros(3, dtype = int)

for i in golpro:
	if golpro[i] > golcon[i]:
		x[0] += 1
	if golpro[i] == golcon[i]:
		x[1] += 1
	if golpro[i] < golcon[i]:
		x[2] += 1
	print(x)
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 20:40:37) 
-- CODE:
from numpy import *

golpro = array(eval(input("")))
golcon = array(eval(input("")))

x = zeros(3, dtype = int)

for i in golpro:
	if golpro[i] > golcon[i]:
		x[0] += 1
	if golpro[i] == golcon[i]:
		x[1] += 1
	if golpro[i] < golcon[i]:
		x[2] += 1
	print(x)
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 20:41:39) 
-- CODE:
from numpy import *

golpro = array(eval(input("")))
golcon = array(eval(input("")))

x = zeros(3, dtype = int)

for i in golpro:
	if golpro[i] < golcon[i]:
		x[0] += 1
	if golpro[i] == golcon[i]:
		x[1] += 1
	if golpro[i] > golcon[i]:
		x[2] += 1
	print(x)
print(x)

-- EXECUTION TIME:
0.736659
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[0 0 1]
[0 0 2]
[0 0 3]
[0 0 4]
[0 0 5]
[0 0 6]
[0 0 7]
[0 0 8]
[0 0 9]
[ 0  0 10]
[ 0  1 10]
[ 1  1 10]
[ 1  1 10]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[1 0 0]
[2 0 0]
[3 0 0]
[4 0 0]
[5 0 0]
[6 0 0]
[7 0 0]
[8 0 0]
[9 0 0]
[9 0 0]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[0 0 1]
[0 0 2]
[0 0 3]
[0 0 4]
[0 0 5]
[0 0 6]
[0 0 7]
[0 0 8]
[0 0 9]
[ 0  0 10]
[ 0  0 11]
[ 0  0 12]
[ 0  0 13]
[ 0  0 13]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 20:41:40) 
-- CODE:
from numpy import *

golpro = array(eval(input("")))
golcon = array(eval(input("")))

x = zeros(3, dtype = int)

for i in golpro:
	if golpro[i] < golcon[i]:
		x[0] += 1
	if golpro[i] == golcon[i]:
		x[1] += 1
	if golpro[i] > golcon[i]:
		x[2] += 1
	print(x)
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 20:42:38) 
-- CODE:
from numpy import *

golpro = array(eval(input("")))
golcon = array(eval(input("")))

x = zeros(3, dtype = int)

for i in golpro:
	print(golpro[i],golcon[i])
	if golpro[i] < golcon[i]:
		x[0] += 1
	if golpro[i] == golcon[i]:
		x[1] += 1
	if golpro[i] > golcon[i]:
		x[2] += 1
	print(x)
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 20:43:50) 
-- CODE:
from numpy import *

golpro = array(eval(input("")))
golcon = array(eval(input("")))

x = zeros(3, dtype = int)

for i in golcon:
	print(golpro[i],golcon[i])
	if golpro[i] < golcon[i]:
		x[0] += 1
	if golpro[i] == golcon[i]:
		x[1] += 1
	if golpro[i] > golcon[i]:
		x[2] += 1
	print(x)
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 20:44:15) 
-- CODE:
from numpy import *

golpro = array(eval(input("")))
golcon = array(eval(input("")))

x = zeros(3, dtype = int)

for i in golcon:
	
	if golpro[i] < golcon[i]:
		x[0] += 1
	if golpro[i] == golcon[i]:
		x[1] += 1
	if golpro[i] > golcon[i]:
		x[2] += 1
	print(x)
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 20:44:37) 
-- CODE:
from numpy import *

golpro = array(eval(input("")))
golcon = array(eval(input("")))

x = zeros(3, dtype = int)

for i in golcon:
	
	if golpro[i] < golcon[i]:
		x[0] += 1
	if golpro[i] == golcon[i]:
		x[1] += 1
	if golpro[i] > golcon[i]:
		x[2] += 1
	i += 1
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 20:44:51) 
-- CODE:
from numpy import *

golpro = array(eval(input("")))
golcon = array(eval(input("")))

x = zeros(3, dtype = int)

for i in golcon:
	i = 0
	if golpro[i] < golcon[i]:
		x[0] += 1
	if golpro[i] == golcon[i]:
		x[1] += 1
	if golpro[i] > golcon[i]:
		x[2] += 1
	
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 20:45:03) 
-- CODE:
from numpy import *

golpro = array(eval(input("")))
golcon = array(eval(input("")))

x = zeros(3, dtype = int)

for i in golcon:
	i += 1
	if golpro[i] < golcon[i]:
		x[0] += 1
	if golpro[i] == golcon[i]:
		x[1] += 1
	if golpro[i] > golcon[i]:
		x[2] += 1
	
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 20:45:31) 
-- CODE:
from numpy import *

golpro = array(eval(input("")))
golcon = array(eval(input("")))

x = zeros(3, dtype = int)

for i in golpro:
	if golpro[i] < golcon[i]:
		x[0] += 1
	if golpro[i] == golcon[i]:
		x[1] += 1
	if golpro[i]  golcon[i]:
		x[2] += 1
	print(x)
print(x)

-- ERROR:
File "XXXX", line 13
    if golpro[i]  golcon[i]:
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 20:45:37) 
-- CODE:
from numpy import *

golpro = array(eval(input("")))
golcon = array(eval(input("")))

x = zeros(3, dtype = int)

for i in golpro:
	if golpro[i] > golcon[i]:
		x[0] += 1
	if golpro[i] == golcon[i]:
		x[1] += 1
	if golpro[i] < golcon[i]:
		x[2] += 1
	print(x)
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 20:46:21) 
-- CODE:
from numpy import *

golpro = array(eval(input("")))
golcon = array(eval(input("")))

x = zeros(3, dtype = int)
i = 0
for i in golpro:
	if golpro[i] > golcon[i]:
		x[0] += 1
	if golpro[i] == golcon[i]:
		x[1] += 1
	if golpro[i] < golcon[i]:
		x[2] += 1
	print(x)
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 20:46:50) 
-- CODE:
from numpy import *

golpro = array(eval(input("")))
golcon = array(eval(input("")))

x = zeros(3, dtype = int)
print(golpro,"s",golcon)
for i in golpro:
	if golpro[i] > golcon[i]:
		x[0] += 1
	if golpro[i] == golcon[i]:
		x[1] += 1
	if golpro[i] < golcon[i]:
		x[2] += 1
	print(x)
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 20:47:22) 
-- CODE:
from numpy import *

golpro = array(eval(input("")))
golcon = array(eval(input("")))

x = zeros(3, dtype = int)
print(golpro,"s",golcon)
for i in golpro:
	print(golpro[i],golcon[i])
	if golpro[i] > golcon[i]:
		x[0] += 1
	if golpro[i] == golcon[i]:
		x[1] += 1
	if golpro[i] < golcon[i]:
		x[2] += 1
	print(x)
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 20:48:03) 
-- CODE:
from numpy import *

golpro = array(eval(input("")))
golcon = array(eval(input("")))

x = zeros(3, dtype = int)
i = 0

while i != size(golpro)
	print(golpro[i],golcon[i])
	if golpro[i] > golcon[i]:
		x[0] += 1
	if golpro[i] == golcon[i]:
		x[1] += 1
	if golpro[i] < golcon[i]:
		x[2] += 1
	i += 1
print(x)

-- EXECUTION TIME:
0.760687
-- ERROR:
  File "/home/codebench/codes/1807/2564/main.py", line 9
    while i != size(golpro)
                          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 20:48:09) 
-- CODE:
from numpy import *

golpro = array(eval(input("")))
golcon = array(eval(input("")))

x = zeros(3, dtype = int)
i = 0

while i != size(golpro)
	
	if golpro[i] > golcon[i]:
		x[0] += 1
	if golpro[i] == golcon[i]:
		x[1] += 1
	if golpro[i] < golcon[i]:
		x[2] += 1
	i += 1
print(x)

-- EXECUTION TIME:
0.814908
-- ERROR:
  File "/home/codebench/codes/1807/2564/main.py", line 9
    while i != size(golpro)
                          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 20:48:11) 
-- CODE:
from numpy import *

golpro = array(eval(input("")))
golcon = array(eval(input("")))

x = zeros(3, dtype = int)
i = 0

while i != size(golpro)
	
	if golpro[i] > golcon[i]:
		x[0] += 1
	if golpro[i] == golcon[i]:
		x[1] += 1
	if golpro[i] < golcon[i]:
		x[2] += 1
	i += 1
print(x)

-- ERROR:
File "XXXX", line 9
    while i != size(golpro)
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 20:48:19) 
-- CODE:
from numpy import *

golpro = array(eval(input("")))
golcon = array(eval(input("")))

x = zeros(3, dtype = int)
i = 0

while i != size(golpro):
	
	if golpro[i] > golcon[i]:
		x[0] += 1
	if golpro[i] == golcon[i]:
		x[1] += 1
	if golpro[i] < golcon[i]:
		x[2] += 1
	i += 1
print(x)

-- EXECUTION TIME:
1.1291
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[7 3 2]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[12  1  0]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 20:49:03) 
-- CODE:
from numpy import *

golpro = array(eval(input("")))
golcon = array(eval(input("")))

x = zeros(3, dtype = int)


for i in golpro:
	
	if golpro[i] > golcon[i]:
		x[0] += 1
	elif golpro[i] == golcon[i]:
		x[1] += 1
	elif golpro[i] < golcon[i]:
		x[2] += 1
	
print(x)

-- EXECUTION TIME:
1.1717
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[10  1  1]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[13  0  0]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 20:49:06) 
-- CODE:
from numpy import *

golpro = array(eval(input("")))
golcon = array(eval(input("")))

x = zeros(3, dtype = int)


for i in golpro:
	
	if golpro[i] > golcon[i]:
		x[0] += 1
	elif golpro[i] == golcon[i]:
		x[1] += 1
	elif golpro[i] < golcon[i]:
		x[2] += 1
	
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 20:49:18) 
-- CODE:
from numpy import *

golpro = array(eval(input("")))
golcon = array(eval(input("")))

x = zeros(3, dtype = int)


for i in golpro:
	
	if golpro[i] > golcon[i]:
		x[0] += 1
	elif golpro[i] == golcon[i]:
		x[1] += 1
	elif golpro[i] < golcon[i]:
		x[2] += 1
	
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 20:50:00) 
-- CODE:
from numpy import *

golpro = array(eval(input("")))
golcon = array(eval(input("")))

x = zeros(3, dtype = int)
i = 0

while i != size(golpro):
	
	if golpro[i] > golcon[i]:
		x[0] += 1
	elif golpro[i] == golcon[i]:
		x[1] += 1
	if golpro[i] < golcon[i]:
		x[2] += 1
	i += 1
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 20:50:03) 
-- CODE:
from numpy import *

golpro = array(eval(input("")))
golcon = array(eval(input("")))

x = zeros(3, dtype = int)
i = 0

while i != size(golpro):
	
	if golpro[i] > golcon[i]:
		x[0] += 1
	elif golpro[i] == golcon[i]:
		x[1] += 1
	if golpro[i] < golcon[i]:
		x[2] += 1
	i += 1
print(x)

-- EXECUTION TIME:
0.849441
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[7 3 2]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[12  1  0]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-09 00:13:49) 
-- CODE:
from numpy import *

golpro = array(eval(input("")))
golcon = array(eval(input("")))

x = zeros(3, dtype = int)
i = 0

while i != size(golpro):
	
	if golpro[i] > golcon[i]:
		x[0] += 1
	elif golpro[i] == golcon[i]:
		x[1] += 1
	elif golpro[i] < golcon[i]:
		x[2] += 1
	i += 1
print(x)

-- EXECUTION TIME:
0.9951
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[7 3 2]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[12  1  0]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 00:15:05) 
-- CODE:
from numpy import *

golpro = array(eval(input("")))
golcon = array(eval(input("")))

x = zeros(3, dtype = int)

for i in range(size(golpro)):
	
	if golpro[i] > golcon[i]:
		x[0] += 1
	elif golpro[i] == golcon[i]:
		x[1] += 1
	elif golpro[i] < golcon[i]:
		x[2] += 1
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-09 00:15:10) 
-- CODE:
from numpy import *

golpro = array(eval(input("")))
golcon = array(eval(input("")))

x = zeros(3, dtype = int)

for i in range(size(golpro)):
	
	if golpro[i] > golcon[i]:
		x[0] += 1
	elif golpro[i] == golcon[i]:
		x[1] += 1
	elif golpro[i] < golcon[i]:
		x[2] += 1
print(x)

-- EXECUTION TIME:
1.07901
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[7 3 2]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[12  1  0]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 00:15:11) 
-- CODE:
from numpy import *

golpro = array(eval(input("")))
golcon = array(eval(input("")))

x = zeros(3, dtype = int)

for i in range(size(golpro)):
	
	if golpro[i] > golcon[i]:
		x[0] += 1
	elif golpro[i] == golcon[i]:
		x[1] += 1
	elif golpro[i] < golcon[i]:
		x[2] += 1

print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
